# sdl2-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake_modules/: FindLime2D.cmake  FindLua.cmake  FindSDL2.cmake  FindSFML.cmake
content/: FindSDL2.cmake
src/: main.cpp
tasks/: cmake_config_release.sh  debug.sh
